; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-integrator/extr_integrator_cp.c_sic_handle_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-integrator/extr_integrator_cp.c_sic_handle_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { i32 }

@INTCP_VA_SIC_BASE = common dso_local global i64 0, align 8
@IRQ_STATUS = common dso_local global i64 0, align 8
@IRQ_SIC_START = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.irq_desc*)* @sic_handle_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sic_handle_irq(i32 %0, %struct.irq_desc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.irq_desc*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store %struct.irq_desc* %1, %struct.irq_desc** %4, align 8
  %6 = load i64, i64* @INTCP_VA_SIC_BASE, align 8
  %7 = load i64, i64* @IRQ_STATUS, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i64 @sic_readl(i64 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32, i32* %3, align 4
  %14 = load %struct.irq_desc*, %struct.irq_desc** %4, align 8
  %15 = call i32 @do_bad_IRQ(i32 %13, %struct.irq_desc* %14)
  br label %37

16:                                               ; preds = %2
  br label %17

17:                                               ; preds = %34, %16
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @ffs(i64 %18)
  %20 = sub i32 %19, 1
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = shl i32 1, %21
  %23 = xor i32 %22, -1
  %24 = sext i32 %23 to i64
  %25 = load i64, i64* %5, align 8
  %26 = and i64 %25, %24
  store i64 %26, i64* %5, align 8
  %27 = load i64, i64* @IRQ_SIC_START, align 8
  %28 = load i32, i32* %3, align 4
  %29 = zext i32 %28 to i64
  %30 = add nsw i64 %29, %27
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %3, align 4
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @generic_handle_irq(i32 %32)
  br label %34

34:                                               ; preds = %17
  %35 = load i64, i64* %5, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %17, label %37

37:                                               ; preds = %12, %34
  ret void
}

declare dso_local i64 @sic_readl(i64) #1

declare dso_local i32 @do_bad_IRQ(i32, %struct.irq_desc*) #1

declare dso_local i32 @ffs(i64) #1

declare dso_local i32 @generic_handle_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
